# revio

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.revio/guidelines/: clean_code_principles.md  python_best_practices.md  security_checklist.md
.revio/skills/audit-supply-chain/: SKILL.md
.revio/skills/review-react-rsc/: SKILL.md
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEMO_SCRIPT.md  INTERNALS.md
marketing/: promo.md
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/revio/: config.py
src/revio/agent/: __init__.py  cpp_tools.py  findings_store.py  fix_history.py  generic_tools.py  go_tools.py  graph.py  grounding.py  java_tools.py  js_tools.py  lint_tools.py  llm.py  mcp_client.py  patch.py  plc_tools.py  prompts.py  python_tools.py  runner.py  rust_tools.py  state.py  tool_context.py  tools.py
src/revio/cli/: __init__.py  analyzers.py  fix.py  main.py  mascot.py  models_catalog.py  repl.py  wizard.py
src/revio/detect/: __init__.py  fingerprint.py
src/revio/layers/parser/: __init__.py  call_graph.py  function_index.py  language_support.py  symbol_graph.py  treesitter_generic.py  treesitter_js.py
src/revio/layers/parser/plc/: __init__.py  abb.py  codesys.py  file_support.py  ge.py  omron.py  rockwell.py  simatic.py  st_extractor.py  twincat.py  xml_parser.py
src/revio/layers/parser/plc/converters/: __init__.py  fbd.py  ladder.py  sfc.py
src/revio/layers/rag/: __init__.py  document_loader.py  indexer.py  retriever.py
src/revio/layers/static/: __init__.py  bandit.py  clippy.py  cppcheck.py  detekt.py  golangci_lint.py  luacheck.py  oxlint.py  phpstan.py  plc_cfg.py  plc_hw_config.py  plc_rules.py  rubocop.py  shellcheck.py  spotbugs.py  sqlfluff.py  verilator.py
src/revio/mcp_server/: __init__.py  server.py
src/revio/output/: __init__.py  cost.py  models.py  stream.py
src/revio/profiles/: __init__.py  base.py  cpp_runtime.py  generic_runtime.py  go_runtime.py  java_runtime.py  js_runtime.py  plc_runtime.py  python_runtime.py  rust_runtime.py
src/revio/profiles/cobol/: __init__.py
src/revio/profiles/cpp/: __init__.py
src/revio/profiles/dart/: __init__.py
src/revio/profiles/generic/: __init__.py
src/revio/profiles/go/: __init__.py
src/revio/profiles/java/: __init__.py
src/revio/profiles/js/: __init__.py
src/revio/profiles/kotlin/: __init__.py
src/revio/profiles/lua/: __init__.py
src/revio/profiles/matlab/: __init__.py
src/revio/profiles/objc/: __init__.py
src/revio/profiles/php/: __init__.py
src/revio/profiles/plc/: __init__.py
src/revio/profiles/python/: __init__.py
src/revio/profiles/r/: __init__.py
src/revio/profiles/ruby/: __init__.py
src/revio/profiles/rust/: __init__.py
src/revio/profiles/sas/: __init__.py
src/revio/profiles/shell/: __init__.py
src/revio/profiles/solidity/: __init__.py
src/revio/profiles/sql/: __init__.py
src/revio/profiles/verilog/: __init__.py
src/revio/profiles/zig/: __init__.py
src/revio/skills/: __init__.py  loader.py
tests/: test_fix_history_smoke.py  test_languages_smoke.py  test_m1_smoke.py  test_m2_smoke.py  test_m3_smoke.py  test_mcp_bridge.py  test_mcp_server_smoke.py  test_patch_smoke.py  test_phase2_linters_smoke.py  test_plc_smoke.py  test_repl_nl_smoke.py
tests/fixtures/js_sample/: package.json
tests/fixtures/js_sample/.revio/skills/audit-supply-chain/: SKILL.md
tests/fixtures/js_sample/src/: server.js  utils.js
tests/fixtures/multilang/cpp_sample/: bad.cpp
tests/fixtures/multilang/go_sample/: main.go
tests/fixtures/multilang/go_sample_module/: go.mod  main.go
tests/fixtures/multilang/java_sample/: Greeter.java
tests/fixtures/multilang/python_sample/: app.py
tests/fixtures/multilang/rust_sample/src/: lib.rs
tests/fixtures/plc_sample/: MotorControl.st
