[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revio"
version = "0.1.0"
description = "Agentic code review CLI — diff review, full-repo audit, AI-redundancy dedup"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "revio" }]

dependencies = [
    # Agent runtime
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    # CLI
    "typer>=0.12.0",
    "prompt_toolkit>=3.0.43",
    "questionary>=2.0.1",
    "rich>=13.7.0",
    # Config + models
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "tomli>=2.0.1; python_version < '3.11'",
    # Git
    "gitpython>=3.1.40",
    # Reliability
    "tenacity>=8.2.0",
    # Checkpointing
    "langgraph-checkpoint-sqlite>=2.0.0",
    # Skills (M3)
    "pyyaml>=6.0.0",
    # MCP client (M3)
    "mcp>=1.0.0",
    # SSL trust on macOS / minimal-Python boxes (used by /v1/models discovery)
    "certifi>=2024.1.1",
]

[project.optional-dependencies]
# RAG over your coding guidelines. Heavy (~1 GB: torch + sentence-transformers
# + chromadb). Skip this extra if you don't index guidelines — RAG search
# will be a no-op but the rest of revio is unaffected.
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "langchain-huggingface>=0.1.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.2.0",
]
js = [
    "tree-sitter>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]
plc = [
    "lxml>=5.0.0",
]
python = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "bandit>=1.7.0",
]
# Generic multi-language support (Tree-sitter grammars from v1).
# Not all packages exist on PyPI / install cleanly on every platform —
# language_support.py degrades gracefully when a grammar is unavailable.
languages = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-bash>=0.23.0",
    "tree-sitter-lua>=0.5.0",
    "tree-sitter-sql>=0.3.0",
    "tree-sitter-julia>=0.23.0",
    "tree-sitter-scala>=0.23.0",
    "tree-sitter-kotlin>=1.0.0",
    "tree-sitter-swift>=0.7.0",
    "tree-sitter-verilog>=1.0.0",
]
all = ["revio[js,plc,python,languages,rag]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
revio = "revio.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
